--- a/test.html
+++ b/test.html
@@ -58,7 +58,7 @@
                     startX = pointer.x;
                     startY = pointer.y;
 
-                    triangle = new fabric.Triangle({
+                    triangle = new fabric.Textbox('asdasd',{
                         left: startX,
                         top: startY,
                         width: 0,
